--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "node-fetch": "^2.3.0",
+    "nodemailer": "^5.1.1",
     "public-ip": "^3.0.0",
     "winston": "^2.4.3",
     "winston-daily-rotate-file": "^3.8.0"
