--- a/node-applications/dns-changer/package.json
+++ b/node-applications/dns-changer/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^6.2.0",
-    "node-fetch": "^2.3.0",
+    "node-fetch": "^2.6.0",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^5.1.1",
-    "public-ip": "^3.0.0",
+    "pm2": "^4.4.0",
+    "public-ip": "^4.0.1",
     "winston": "^2.4.3",
     "winston-daily-rotate-file": "^3.8.0"
   }
