--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,13 @@ services:
         build:
             context: ./node-applications
             dockerfile: Dockerfile
+        environment:
+            DNSCHANGER_CRON_INTERVAL: '* * * * *'
+            DNSCHANGER_CLOUDFLARE_USERNAME: xxx
+            DNSCHANGER_CLOUDFLARE_KEY: xxx
+            DNSCHANGER_CLOUDFLARE_SEARCH_NAME: xxx
+            DNSCHANGER_CLOUDFLARE_ZONE_ID: xxx
         restart: always
-
     verdaccio:
         container_name: verdaccio
         image: verdaccio/verdaccio:4
@@ -37,9 +42,10 @@ services:
             - ./storage/samba/admin:/samba/admin
             # - ./samba/smb.conf:/etc/samba/smb.conf
         environment:
-            USER1: 'kube_k;admin'
+            GLOBAL1: 'access based share enum = yes'
+            USER1: 'adminUser;admin'
             SHARE1: 'public;/samba/anonymous'
-            SHARE2: 'admin;/samba/admin;yes;no;no;kube_k'
+            SHARE2: 'admin;/samba/admin;yes;no;no;adminUser'
         ports:
             - "139:139"
             - "445:445"
