--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -1,17 +1,20 @@
+[global]
+    map to guest = Bad User
+    log file = /var/log/samba/%m
+    log level = 1
+    access based share enum = yes
+
+# This share allows anonymous (guest) access without authentication!
+[guest]
+    path = /samba/anonymous
+    read only = no
+    guest ok = yes
+    guest only = yes
+
 [admin]
    path = /samba/admin
    browsable = yes
    read only = no
    guest ok = no
-   veto files = /.apdisk/.DS_Store/.TemporaryItems/.Trashes/desktop.ini/ehthumbs.db/Network Trash Folder/Temporary Items/Thumbs.db/
    delete veto files = yes
-   valid users = kube_k
-
-[public]
-   path = /samba/anonymous
-   browsable = yes
-   read only = yes
-   guest ok = yes
-   veto files = /.apdisk/.DS_Store/.TemporaryItems/.Trashes/desktop.ini/ehthumbs.db/Network Trash Folder/Temporary Items/Thumbs.db/
-   delete veto files = yes
-
+   valid users = adminUser
