--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -14,7 +14,8 @@
 [admin]
    path = /samba/admin
    browsable = yes
+   writable = yes
    read only = no
    guest ok = no
    delete veto files = yes
-   valid users = adminUser
+   valid users = kube_k
